fixed navbar brand overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,6 +8,7 @@
     top: 25px;
     margin-left: -100px;
     display: block;
+    max-width: 200px;
 }
 
 .navbar-brand > img {
